interfaces/Julia/src/libuno.jl


function uno_get_number_objective_evaluations(solver)
    @ccall libuno.uno_get_number_objective_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_get_number_constraint_evaluations(solver)
    @ccall libuno.uno_get_number_constraint_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_get_number_objective_gradient_evaluations(solver)
    @ccall libuno.uno_get_number_objective_gradient_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_get_number_jacobian_evaluations(solver)
    @ccall libuno.uno_get_number_jacobian_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_get_number_hessian_evaluations(solver)
    @ccall libuno.uno_get_number_hessian_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_get_number_subproblem_solved_evaluations(solver)
    @ccall libuno.uno_get_number_subproblem_solved_evaluations(solver::Ptr{Cvoid})::Int32
end

function uno_destroy_model(model)
    @ccall libuno.uno_destroy_model(model::Ptr{Cvoid})::Cvoid
end

function uno_destroy_solver(solver)
    @ccall libuno.uno_destroy_solver(solver::Ptr{Cvoid})::Cvoid
end
